--- a/acam/acam.vcxproj.filters
+++ b/acam/acam.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClCompile Include="loopback-capture-helpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="vcam_main.cpp">
+    <ClCompile Include="virt_audio_all.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
