--- a/vcam_vs_2010/vcam_vs_2010/vcam_vs_2010.vcxproj.filters
+++ b/vcam_vs_2010/vcam_vs_2010/vcam_vs_2010.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClCompile Include="Dll.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Filters.cpp">
+    <ClCompile Include="Filters_vcam.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
