--- a/vcam_vs_2010/vcam_vs_2010/vcam_vs_2010.vcxproj
+++ b/vcam_vs_2010/vcam_vs_2010/vcam_vs_2010.vcxproj
@@ -87,7 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dll.cpp" />
-    <ClCompile Include="Filters.cpp" />
+    <ClCompile Include="Filters_vcam.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
